[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "openlifu-sdk"
authors = [
  { name = "Peter Hollender", email = "peterhollender@gmail.com" },
]
description = "Openwater LIFU SDK — hardware I/O interface library"
readme = "README.md"
license.file = "LICENSE"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
  "numpy",
  "pandas",
  "xarray",
  "pyserial",
]

[project.optional-dependencies]
test = [
  "pytest>=6",
  "pytest-cov>=3",
  "pytest-mock",
]
dev = [
  "pytest>=6",
  "pytest-cov>=3",
  "pytest-mock",
]


[project.urls]
Homepage = "https://github.com/OpenwaterHealth/openlifu-sdk"
"Bug Tracker" = "https://github.com/OpenwaterHealth/openlifu-sdk/issues"


[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = [
  "src/",
  "LICENSE",
  "README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openlifu_sdk"]
