[build-system]
requires = ["setuptools>=77.0", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"


[project]
name = "openlifu-sdk"
dynamic = ["version"]
authors = [
  { name = "George Vigelette", email = "george@openwater.health" },
]
description = "Openwater LIFU SDK — hardware I/O interface library"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = [
  "numpy",
  "pandas",
  "xarray",
  "pyserial",
  "pyusb",
]

[project.optional-dependencies]
test = [
  "pytest>=6",
  "pytest-cov>=3",
  "pytest-mock",
]
dev = [
  "pytest>=6",
  "pytest-cov>=3",
  "pytest-mock",
  "pre-commit",
  "ruff",
  "mypy",
]


[project.urls]
Homepage = "https://github.com/OpenwaterHealth/openlifu-sdk"
"Bug Tracker" = "https://github.com/OpenwaterHealth/openlifu-sdk/issues"


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
openlifu_sdk = [
  "py.typed",
  "firmware/*.bin",
  "libusb/win64/*.dll",
  "libusb/win32/*.dll",
]


[tool.setuptools_scm]
# Uses tags like v1.2.3 or 1.2.3  ->  1.2.3
tag_regex = "^(?:pre-)?v?(?P<version>\\d+\\.\\d+\\.\\d+)$"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"